# gladoid-bot-rust

./: .gitignore  Cargo.toml
migration/: Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_table_gladiator.rs  m20221008_195747_create_table_attack_type.rs  m20221008_200725_create_table_attack_types_gladiators.rs  m20221014_114741_add_level_to_gladiator.rs
src/: game.rs  main.rs
src/commands/: dungeon.rs
src/database/: models.rs
src/entity/: attack_type.rs  attack_types_gladiators.rs  gladiator.rs  mod.rs  prelude.rs
src/game/: gladiator.rs  gladiator_game.rs  mod.rs
src/game/gladiator/: attack.rs  player.rs
