[package]
name = "gladoid-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3.24"
async-std = { version = "^1", features = ["attributes", "tokio1"] }
sea-orm = { version = "^0.9.0", features = [ "sqlx-sqlite", "runtime-async-std-native-tls", "macros" ] }


[dev-dependencies]
sea-orm-cli = {version="^0.9.0"}
