[package]
name = "gladoid-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = {version="^0.3"}
async-std = {version="^1.12", features= ["attributes", "tokio1"]}
sea-orm = { version = "^0.9.0", features = [ "sqlx-sqlite", "runtime-async-std-native-tls", "macros" ] }
serenity =  { version = "0.11", default_features = false, features = ["client", "gateway", "rustls_backend", "model", "cache"]}
rand = "0.8"

[dev-dependencies]
sea-orm-cli = {version="^0.9.0"}

